# scylladb-php-driver

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  README.md  build.rs  debug.php  php_driver.cpp  phpunit.xml
.github/workflows/: build.yml  docker-image.yml  test.yml  tests.yml
.run/: Base Image.run.xml  Extension.run.xml
.runs/: Extension.run.xml
ZendCPP/: CMakeLists.txt  ZendCPP.hpp
ZendCPP/String/: Builder.cpp  Builder.h  ByteIterator.cpp  ByteIterator.h  CMakeLists.txt  String.cpp  String.h
cmake/: FindCassandraDriver.cmake  FindLibUV.cmake  FindPHP.cmake  FindPHPConfig.cmake  FindScyllaDBDriver.cmake  ScyllaDBPHPLibrary.cmake  TargetOptimizations.cmake
docs/: compile-php-debug.sh
include/: api.h  php_driver.h  php_driver_globals.h  php_driver_types.h
include/DateTime/: Date.h  DateTime.h
include/RetryPolicy/: RetryPolicy.h
scripts/: compile-extension.sh  compile-php.sh
src/: BatchStatement.cpp  Bigint.cpp  Blob.cpp  CMakeLists.txt  Collection.cpp  Core.cpp  Date.cpp  Decimal.cpp  DefaultAggregate.cpp  DefaultColumn.cpp  DefaultColumn.h  DefaultFunction.cpp  DefaultFunction.h  DefaultIndex.cpp  DefaultIndex.h  DefaultKeyspace.cpp  DefaultMaterializedView.cpp  DefaultSchema.cpp  DefaultSession.cpp  DefaultTable.cpp  DefaultTable.h  Duration.cpp  ExecutionOptions.cpp  Float.cpp  FutureClose.cpp  FuturePreparedStatement.cpp  FutureRows.cpp  FutureSession.cpp  FutureValue.cpp  Inet.cpp  Map.cpp  Map.h  PreparedStatement.cpp  Rows.cpp  SSLOptions.cpp  Set.cpp  SimpleStatement.cpp  Smallint.cpp  Table.cpp  Timeuuid.cpp  (+8 more)
src/Cluster/: Builder.cpp  BuilderHandlers.cpp  CMakeLists.txt  Cluster.cpp  Cluster.h  DefaultCluster.cpp  DefaultClusterHandlers.cpp  SSLOptions.cpp
src/Database/: Aggregate.cpp  CMakeLists.txt  DefaultAggregate.cpp  DefaultColumn.h  DefaultFunction.cpp  DefaultFunction.h  DefaultIndex.cpp  DefaultIndex.h  DefaultKeyspace.cpp  DefaultMaterializedView.cpp  DefaultMaterializedView.h  DefaultSchema.cpp  DefaultTable.cpp  DefaultTable.h  Function.cpp  Rows.cpp  Table.cpp  Table.h
src/DateTime/: CMakeLists.txt  Date.cpp  Date.h  Date.stub.php  DateTime.cpp  DateTimeInternal.cpp  DateTimeInternal.h  Date_arginfo.h  Duration.cpp  Duration.h  Time.cpp  Time.h  Time.stub.php  Time_arginfo.h  Timestamp.cpp  Timestamp.stub.php  Timestamp_arginfo.h  Timeuuid.cpp  Timeuuid.h  Timeuuid.stub.php  Timeuuid_arginfo.h
src/Exception/: AlreadyExistsException.cpp  CMakeLists.txt  ConfigurationException.cpp  DomainException.cpp  Exception.cpp  InvalidArgumentException.cpp  InvalidQueryException.cpp  InvalidSyntaxException.cpp  IsBootstrappingException.cpp  LogicException.cpp  OverloadedException.cpp  ProtocolException.cpp  RangeException.cpp  ReadTimeoutException.cpp  RuntimeException.cpp  ServerException.cpp  TimeoutException.cpp  TruncateException.cpp  UnauthorizedException.cpp  UnavailableException.cpp  UnpreparedException.cpp  ValidationException.cpp  WriteTimeoutException.cpp
src/Numbers/: Bigint.cpp  CMakeLists.txt  Decimal.cpp  Smallint.cpp  Tinyint.cpp  Varint.h
src/RetryPolicy/: CMakeLists.txt  DefaultPolicy.cpp  DefaultPolicy.stub.php  DefaultPolicy_arginfo.h  DowngradingConsistency.cpp  DowngradingConsistency.stub.php  DowngradingConsistency_arginfo.h  Fallthrough.cpp  Fallthrough.stub.php  Fallthrough_arginfo.h  Logging.cpp  Logging.stub.php  Logging_arginfo.h  RetryPolicy.cpp  RetryPolicy.stub.php  RetryPolicy_arginfo.h
src/SSLOptions/: Builder.cpp  CMakeLists.txt
src/TimestampGenerator/: CMakeLists.txt  Monotonic.cpp  ServerSide.cpp
src/Type/: CMakeLists.txt  Collection.cpp  Custom.cpp  Map.cpp  Scalar.cpp  Set.cpp  Tuple.cpp  Tuple.h  UserType.cpp
tests/: composer.json  phpunit.xml
tests/Feature/ClientSide/: ClientSideTimestampsTest.php
tests/Feature/Results/: ResultPagingTest.php
tests/Feature/Statements/: SimpleStatementsTest.php
tests/Feature/Tuples/: TuplesTest.php
tests/Unit/DateTime/: DateTest.php  TimestampTest.php
tests/Unit/Uuid/: UuidTest.php
util/: CMakeLists.txt  bytes.h  hash.h  result.h  types.h
util/src/: bytes.cpp  collections.cpp  future.cpp  hash.cpp  inet.cpp  result.cpp  types.cpp  uuid_gen.cpp
